// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferReviewCard renders correctly for invite review 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingBottom": 25,
      "paddingHorizontal": 40,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "margin": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#7AD6FE",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/unknown-user-icon.png",
            }
          }
          style={
            Array [
              Object {
                "alignSelf": "center",
                "margin": "auto",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      walletAddress
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "fontFamily": "Hind-Light",
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      #000000000000000...
    </Text>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flexDirection": "row",
        "marginHorizontal": 25,
        "marginTop": 15,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 48,
            "lineHeight": 64,
          },
          Object {
            "color": "#81868B",
          },
        ]
      }
    >
      133.00
    </Text>
    <Text
      style={
        Object {
          "alignSelf": "flex-end",
          "color": "#BDBDBD",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 64,
          "marginLeft": 7,
        }
      }
    >
      MXN
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "column",
        "marginTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "borderStyle": "solid",
          "borderTopColor": "#EEEEEE",
          "borderTopWidth": 1,
          "marginTop": 10,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "stretch",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              }
            }
          >
            amountInCelloDollars
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          100.00
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#BDBDBD",
            "fontFamily": "Hind-Light",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 3,
          }
        }
      >
        localValueHint
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              }
            }
          >
            inviteAndSecurityFee
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          0.20
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              }
            }
          >
            securityFee
          </Text>
          <View
            accessible={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            isTVSelectable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "flex-end",
                "paddingHorizontal": 5,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/info.png",
                }
              }
              style={
                Object {
                  "height": 12,
                  "width": 12,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              }
            }
          >
            total
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          100.00
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransferReviewCard renders correctly for pay request review 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingBottom": 25,
      "paddingHorizontal": 40,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "margin": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#7AD6FE",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/unknown-user-icon.png",
            }
          }
          style={
            Array [
              Object {
                "alignSelf": "center",
                "margin": "auto",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      mobileNumber
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Light",
              "fontSize": 14,
              "textAlignVertical": "center",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "#EEEEEE",
              "borderRadius": 3,
              "justifyContent": "center",
              "marginRight": 5,
              "paddingLeft": 6,
              "paddingRight": 3,
            },
          ]
        }
      >
        🇺🇸 +1
      </Text>
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Light",
            "fontSize": 14,
            "textAlignVertical": "center",
          }
        }
      >
        (415) 555-0000
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flexDirection": "row",
        "marginHorizontal": 25,
        "marginTop": 15,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 48,
            "lineHeight": 64,
          },
          Object {
            "color": "#81868B",
          },
        ]
      }
    >
      133.00
    </Text>
    <Text
      style={
        Object {
          "alignSelf": "flex-end",
          "color": "#BDBDBD",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 64,
          "marginLeft": 7,
        }
      }
    >
      MXN
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "column",
        "marginTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "borderStyle": "solid",
          "borderTopColor": "#EEEEEE",
          "borderTopWidth": 1,
          "marginTop": 10,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "stretch",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              }
            }
          >
            amountInCelloDollars
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          100.00
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#BDBDBD",
            "fontFamily": "Hind-Light",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 3,
          }
        }
      >
        localValueHint
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              }
            }
          >
            securityFee
          </Text>
          <View
            accessible={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            isTVSelectable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "flex-end",
                "paddingHorizontal": 5,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/info.png",
                }
              }
              style={
                Object {
                  "height": 12,
                  "width": 12,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              }
            }
          >
            total
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          100.00
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransferReviewCard renders correctly for send review 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingBottom": 25,
      "paddingHorizontal": 40,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "margin": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#7AD6FE",
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/unknown-user-icon.png",
            }
          }
          style={
            Array [
              Object {
                "alignSelf": "center",
                "margin": "auto",
              },
              Object {
                "height": 40,
                "width": 40,
              },
            ]
          }
        />
      </View>
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      walletAddress
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "fontFamily": "Hind-Light",
          },
          Object {
            "marginHorizontal": 20,
            "paddingTop": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      #000000000000000...
    </Text>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flexDirection": "row",
        "marginHorizontal": 25,
        "marginTop": 15,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 48,
            "lineHeight": 64,
          },
          Object {
            "color": "#81868B",
          },
        ]
      }
    >
      0.39
    </Text>
    <Text
      style={
        Object {
          "alignSelf": "flex-end",
          "color": "#BDBDBD",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 64,
          "marginLeft": 7,
        }
      }
    >
      MXN
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flexDirection": "column",
        "marginTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "borderStyle": "solid",
          "borderTopColor": "#EEEEEE",
          "borderTopWidth": 1,
          "marginTop": 10,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "stretch",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              }
            }
          >
            amountInCelloDollars
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          0.30
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#BDBDBD",
            "fontFamily": "Hind-Light",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 3,
          }
        }
      >
        localValueHint
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              }
            }
          >
            securityFee
          </Text>
          <View
            accessible={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            isTVSelectable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "type": "ThemeAttrAndroid",
              }
            }
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "flex-end",
                "paddingHorizontal": 5,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/info.png",
                }
              }
              style={
                Object {
                  "height": 12,
                  "width": 12,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              }
            }
          >
            total
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 20,
            }
          }
        >
          0.30
        </Text>
      </View>
    </View>
  </View>
</View>
`;
